add fill button

--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@
           </select>
         </div>
         <div class="side-bar-input">
-          <label for="pencil-color">Pencil Color</label>
+          <label for="pencil-color">Current Color</label>
           <input type="color" name="pencil-color" id="pencil-color-input">
         </div>
         <button id="pencil-button">Pencil 🖌</button>
         <button id="eraser-button">Eraser 🧽</button>
+        <button id="fill-button">Fill 🪣</button>
         <button id="clear-button">Clear Canvas</button>
       </div>
     </div>
